feat: 사용자 등록, 탈퇴, 로그인, 로그아웃, 세션 연장 기능 추가