@@ -1,6 +1,6 @@
 package com.message.handler;
 
-import com.message.dto.Message;
+import com.message.dto.websocket.outbound.MessageRequest;
 import com.message.service.TerminalService;
 import com.message.util.JsonUtil;
 
@@ -14,18 +14,22 @@ public class WebSocketSender {
 		this.terminalService = terminalService;
 	}
 
-	public void sendMessage(Session session, Message message) {
+	public void sendMessage(Session session, MessageRequest message) {
 		if (session != null && session.isOpen()) {
 			JsonUtil.toJson(message)
 				.ifPresent(
-					msg -> {
-						try {
-							session.getBasicRemote().sendText(msg);
-						} catch (Exception e) {
-							terminalService.printSystemMessage(
-								String.format("%s send failed. error: %s", msg, e.getMessage()));
-						}
-					});
+					payload ->
+						// 동기 방식
+						// session.getBasicRemote().sendText(payload);
+
+						// 비동기 방식
+						session.getAsyncRemote().sendText(payload, result -> {
+							if (!result.isOK()) {
+								terminalService.printSystemMessage(
+									"'%s' send failed. cause: %s".formatted(payload, result.getException()));
+							}
+						}));
+
 		}
 	}
 }
